# qr_generator

./: CHANGELOG.md  CMakeLists.txt  CMakeLists.txt_svg-webp  README.md
.github/workflows/: quality_security.yml  repo-create_doctoc_md.yml
include/: qr_generator.hpp
src/: main.cpp  main_single.cpp  qr_svg.cpp  qr_webp.cpp
